# samaware

./: .gitignore  MANIFEST.in  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: ci.yml  publish.yml
src/samaware/: __init__.py  apps.py  forms.py  models.py  queries.py  signals.py  urls.py  views.py  wekan.py
src/samaware/fixtures/: samaware.json
src/samaware/migrations/: 0001_initial.py  0002_techrider.py  0003_techrider_last_sync_techrider_sync_dirty_and_more.py
src/samaware/static/samaware/: samaware.css  samaware.js
src/samaware/templates/samaware/: care_message_edit.html  care_message_list.html  dashboard.html  missing_speakers_list.html  no_recording_list.html  talk_overview.html  tech_rider_edit.html  tech_rider_list.html
src/samaware/templates/samaware/fragments/: form_or_content.html  search_result.html
src/samaware/templatetags/: samaware_extras.py
tests/: lib.py  test_queries.py  test_views.py
